dev-k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: servers
  labels:
    purpose: dev
    app: servers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servers

  template:
    metadata:
      labels:
        app: servers

    spec:
      containers:
        - name: servers
          image: servers
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: servers
  labels:
    app: servers
    service: servers
  annotations:
    ingress.kubernetes.io/service-upstream: "true"
spec:
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: http
  selector:
    app: servers

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: servers
  namespace: dev
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/preserve-host: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /servers
            pathType: ImplementationSpecific
            backend:
              service:
                name: servers
                port:
                  number: 4000
